k8s/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-golang
  labels:
    app: sample-golang
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-golang
  template:
    metadata:
      labels:
        app: sample-golang
    spec:
      containers:
        - name: sample-golang
          image: tahmid55/sample-golang:latest
          ports:
            - containerPort: 8080
