k8s/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-golang
  labels:
    app: sample-golang
spec:
  selector:
    app: sample-golang
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
